name:                hrunr
version:             0.1.2.0
synopsis:            CLI to interact with Rundeck's API
description:         Please see README.md
homepage:            http://github.com/solaryeti/hrunr
license:             BSD3
license-file:        LICENSE
author:              Steven Meunier
maintainer:          code@solaryeti.com
-- copyright:
category:            Application
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Rundeck.Call
                     , Rundeck.Urls
                     , Rundeck.Xml
  build-depends:       base >= 4.7 && < 5
                     , wreq >= 0.4
                     , bytestring
                     , lens >= 4.12
                     , text
                     , xml-conduit
                     , xml-types
                     , http-client >= 0.4
  default-language:    Haskell2010

executable hrunr
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -Werror
  other-modules  :     Hrunr.Options
  build-depends:       base
                     , hrunr
                     , bytestring
                     , optparse-applicative
                     , text
                     , http-client >= 0.4
                     , http-types >= 0.8
                     , lens >= 4.12
                     , wreq >= 0.4
  default-language:    Haskell2010

test-suite hrunr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hrunr
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/name/project
